2008-02-18 Jesse Kornblum <research@jessekornblum.com>

	* Added man pages to the EXTRA_DIST Makefile variable.
	  Still need to reconfigure.

	* Added more documentation to the Windows zip file along
	  with the sample.c file

	* Removed extraneous recongfiguration from Makefile.am
	

2008-02-17 Jesse Kornblum <research@jessekornblum.com>

	* Updated build system to create Win32 DLL, documentation,
	  and packages.

	* Added check in print_error functions to see if the state
	  is valid. 
	  
	* Updated documentation, usage message.

	* Added signature comparison example to sample program.
	

2008-02-16 Jesse Kornblum <research@jessekornblum.com>

	* Removed block_size value from state variable. 
	  Nobody was using it.

	* Ammended API functions to support hashing either a buffer
	  or an open file handle

	* Moved ssdeep code into engine.c, moved fuzzy hashing
	  code into fuzzy.c. This will help us create libfuzzy
	  and fuzzy.dll.

	* Lots of cleanup to fuzzy hashing code. This includes removing
	  types like 'uchar' and replacing them with C99 types like
	  unsigned char. Less work for mother means less work debugging.

	* Moved definition of __progname to ssdeep.h. It's not being
	  used by the fuzzy hashing library and caused problems on OS X.

	* Brought over code to support Unicode from Miss Identify

	* Version bump to 2.0 beta1

	* Added sample program to demonstrate API features
	

2008-02-15 Jesse Kornblum <research@jessekornblum.com>

	* Changing Win32 build to create DLL. All other
	  versions should have library/header files installed
	

2008-02-14 Jesse Kornblum <research@jessekornblum.com>

	* Moved to autotools structure
	