@@ -1,3 +1,11 @@
+2008-02-22 Jesse Kornblum <research@jessekornblum.com>
+
+	* Changed reading of known hash files back to using
+	  unsigned char values. This also required updating
+	  the match_compare function to handle Unicode
+	  characters when displaying match results.
+	
+
 2008-02-18 Jesse Kornblum <research@jessekornblum.com>
 
 	* Added man pages to the EXTRA_DIST Makefile variable.
